<resources>
    <string name="app_name">清檬伙伴</string>
    <string name="title_home">首页</string>
    <string name="title_recommend">推荐</string>
    <string name="text_customer">客户</string>
    <string name="text_attendant">护理员</string>
    <string name="text_recommend_customer">推荐客户</string>
    <string name="text_recommend_attendant">推荐护理员</string>
    <string name="title_mine">我的</string>
    <string name="text_login">登录</string>
    <string name="text_logout">退出</string>
    <string name="text_mine_profile">个人资料</string>
    <string name="text_change_password">密码修改</string>
    <string name="text_request_failed">请求数据失败</string>
    <string name="text_request_succeed">请求数据成功</string>
    <string name="text_password_manage">密码管理</string>
    <string name="text_input_old_password">请输入旧密码</string>
    <string name="text_input_new_password">请输入新密码</string>
    <string name="text_input_new_password_again">请输入再次新密码</string>
    <string name="text_password">密码</string>
    <string name="text_change">修改</string>
    <string name="text_account_secure">账号安全</string>
    <string name="text_user_info">个人资料</string>
    <string name="text_user_head">头像</string>
    <string name="text_user_name">姓名</string>
    <string name="text_user_sex">性别</string>
    <string name="text_user_birthday">出身日期</string>
    <string name="text_input_mobile">输入已经注册的手机号</string>
    <string name="text_input_password">输入登录密码</string>
    <string name="text_submit">提交</string>
    <string name="text_input">输入</string>
    <string name="text_input_content">你的名字</string>
    <string name="text_confirm">确定</string>
    <string name="text_set_use_head_failed">拍照或选取图片失败</string>
    <string name="text_login_first">您还没有登录,请先登录</string>
    <string name="text_mobile_syntax_error">手机号格式错误</string>
    <string name="text_password_syntax_error">密码格式错误</string>
    <string name="text_login_succeed">登录成功</string>
    <string name="text_login_failed">登录异常，请稍后再试</string>
    <string name="text_prefix_token">Bearer</string>
    <string name="text_fetch_user_info_failed">获取用户信息失败，请稍后再试</string>
    <string name="text_real_logout">您确定要退出吗？</string>
    <string name="text_cancel">取消</string>
    <string name="text_already_logout">您已经正常退出</string>
    <string name="text_sex_man">男</string>
    <string name="text_sex_woman">女</string>
    <string name="text_empty"></string>
    <string name="text_old_password_syntax_error">原密码格式错误</string>
    <string name="text_new_password_syntax_error">新密码格式错误</string>
    <string name="text_new_password_different">两次新密码不一致</string>
    <string name="text_change_password_failed">修改密码失败，请稍后再试</string>
    <string name="text_change_password_succeed">修改密码成功</string>
    <string name="text_unknown_error">遇到未知错误</string>
    <string name="text_create_recommend_customer">推荐客户</string>
    <string name="text_recommend_customer_list">我推荐的客户</string>
    <string name="text_create_recommend_attendant">推荐护理员</string>
    <string name="text_recommend_attendant_list">我推荐的护理员</string>
    <string name="text_input_customer">录入客户</string>
    <string name="text_input_attendant">录入护理员</string>
    <string name="text_input_customer_name">请输入客户名字</string>
    <string name="text_choose_customer_sex">请选择客户性别</string>
    <string name="text_choose_customer_birthday">请输入客户出身日期</string>
    <string name="text_input_customer_phone">请输入客户联系电话</string>
    <string name="text_input_customer_contact">请输入客户联系人</string>
    <string name="text_input_customer_with_contact">请输入客户联系人与客户的关系</string>
    <string name="text_input_customer_care_intent">请选择客户照护意向</string>
    <string name="text_input_attendant_name">请输入护理员名字</string>
    <string name="text_choose_attendant_sex">请选择护理员性别</string>
    <string name="text_choose_attendant_birthday">请输入护理员出身日期</string>
    <string name="text_input_attendant_phone">请输入护理员手机号</string>
    <string name="text_must_input_name">名字是必填项</string>
    <string name="text_must_input_sex">性别是必填项</string>
    <string name="text_must_input_phone">手机号是必填项</string>
    <string name="text_must_input_birthday">出身日期是必填项</string>
    <string name="text_must_input_contact_phone">客户联系人电话是必填项</string>
    <string name="text_must_input_contact">客户联系人是必填项</string>
    <string name="text_must_input_relation">客户联系人与客户的关系是必填项</string>
    <string name="text_must_input_care_intent">客户意向是必填项</string>
    <string name="text_recommend_attendant_failed">推荐护理员失败，请稍后再试</string>
    <string name="text_recommend_attendant_succeed">推荐护理员成功</string>
    <string name="text_recommend_customer_failed">推荐客户失败，请稍后再试</string>
    <string name="text_recommend_customer_succeed">推荐客户成功</string>
    <string name="text_recommend_list">推荐列表</string>
    <string name="text_customer_name">客户姓名：</string>
    <string name="text_customer_sex">客户性别：</string>
    <string name="text_customer_birthday">客户出身日期：</string>
    <string name="text_customer_mobile">客户手机号：</string>
    <string name="text_customer_intent">客户意向：</string>
    <string name="text_attendant_name">护理员姓名：</string>
    <string name="text_attendant_sex">护理员性别：</string>
    <string name="text_attendant_birthday">护理员出身日期：</string>
    <string name="text_attendant_mobile">护理员手机号：</string>
    <string name="text_edit">编辑</string>
    <string name="text_edit_customer">编辑客户</string>
    <string name="text_edit_attendant">编辑护理员</string>
    <string name="text_change_customer_info_failed">修改客户信息失败，请稍后再试</string>
    <string name="text_change_customer_info_succeed">修改客户信息成功</string>
    <string name="text_change_attendant_info_failed">修改护理员信息失败，请稍后再试</string>
    <string name="text_change_attendant_info_succeed">修改护理员信息成功</string>
    <string name="text_not_support_edit_user_info">暂不支持用户自主修改个人信息，如果需要帮助请与我们联系</string>
    <string name="text_not_support_edit_mobile">暂不支持修改手机号</string>
    <string name="text_rebate">返利</string>
    <string name="text_rebate_money">返利总额</string>
    <string name="text_rebate_count">返利笔数</string>
    <string name="text_money_unit">元</string>
    <string name="text_count_unit">次</string>
    <string name="text_from_time_default">1970-01-01</string>
    <string name="text_rebate_type">推荐类型:</string>
    <string name="text_recommend_name">被推荐人:</string>
    <string name="text_mobile">手机号</string>
    <string name="text_fatch_news_detail_failed">获取资讯详情失败，请稍后再试</string>
    <string name="text_lime_news">清檬资讯</string>
    <string name="text_back_home">回到首页</string>
    <string name="text_unknown">未知</string>

    <string name="pref_key_transition_time" translatable="false">pref_key_transition_time</string>

    <string-array name="array_sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="array_user_head">
        <item>拍照</item>
        <item>从手机相册</item>
        <item>取消</item>
    </string-array>

    <string-array name="array_customer_with_contact">
        <item>本人</item>
        <item>配偶</item>
        <item>子女</item>
        <item>其他</item>
    </string-array>

    <string-array name="array_care_intent">
        <item>驻站照护</item>
        <item>驻家照护</item>
        <item>其它</item>
    </string-array>

    <string-array name="array_recommend_status">
        <item>已推荐</item>
        <item>咨询</item>
        <item>评估</item>
        <item>签约</item>
        <item>收费</item>
        <item>合约中</item>
        <item>合约结束</item>
        <item>已关闭</item>
    </string-array>

    <string-array name="array_rebate_type">
        <item>客户</item>
        <item>护理员</item>
    </string-array>

</resources>
