<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.limefamily.recommend.activity.PasswordManageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingRight="10dp"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:onClick="back">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_back"/>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#333333"
                android:textSize="18sp"
                android:text="@string/text_input_attendant"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#cccccc"/>

        <EditText
            android:id="@+id/et_attendant_name"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/shape_common_edit_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:textColorHint="#c8c8c8"
            android:hint="@string/text_input_attendant_name"/>

        <TextView
            android:id="@+id/tv_attendant_sex"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/shape_common_edit_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:textColor="#333333"
            android:textColorHint="#c8c8c8"
            android:hint="@string/text_choose_attendant_sex"/>

        <TextView
            android:id="@+id/tv_attendant_birthday"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/shape_common_edit_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:textColor="#333333"
            android:textColorHint="#c8c8c8"
            android:hint="@string/text_choose_attendant_birthday"/>

        <EditText
            android:id="@+id/et_attendant_phone"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/shape_common_edit_bg"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"
            android:textColorHint="#c8c8c8"
            android:hint="@string/text_input_attendant_phone"/>

        <TextView
            android:id="@+id/tv_recommend_attendant_submit"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#f5f5f5"
            android:textSize="15sp"
            android:background="@drawable/shape_common_btn_bg"
            android:text="@string/text_submit"
            android:layout_marginTop="31dp"
            android:gravity="center"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>
