<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.limefamily.recommend.activity.PasswordManageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingRight="10dp"
        android:background="#ffffff"
        android:onClick="back">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#333333"
            android:textSize="18sp"
            android:text="@string/text_password_manage"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#cccccc"/>

    <EditText
        android:id="@+id/et_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_common_edit_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:textColorHint="#c8c8c8"
        android:hint="@string/text_input_old_password"/>

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_common_edit_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:textColor="#333333"
        android:textColorHint="#c8c8c8"
        android:hint="@string/text_input_new_password"/>

    <EditText
        android:id="@+id/et_new_pwd_second"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_common_edit_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14sp"
        android:textColor="#333333"
        android:textColorHint="#c8c8c8"
        android:hint="@string/text_input_new_password_again"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#f5f5f5"
        android:textSize="15sp"
        android:background="@drawable/shape_common_btn_bg"
        android:text="@string/text_commit"
        android:layout_marginTop="31dp"
        android:gravity="center"/>


</LinearLayout>
