<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.limefamily.recommend.activity.AccountSecureActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingRight="10dp"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:onClick="back">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_back"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#333333"
            android:textSize="18sp"
            android:text="@string/text_password_manage"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_change_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/icon_password"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textColor="#333333"
            android:layout_toRightOf="@id/iv_icon"
            android:layout_centerVertical="true"
            android:text="@string/text_password"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#999999"
                android:layout_marginRight="8dp"
                android:text="@string/text_change"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_mine_arrow"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e6e6e6"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="true"/>


</LinearLayout>
