<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.limefamily.recommend.activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:textColor="#333333"
                android:textSize="17sp"
                android:text="@string/text_login"
                android:gravity="center"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#e6e6e6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="52dp"
                android:paddingBottom="32dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/icon_login_logo"/>

            </LinearLayout>

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:inputType="phone"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:background="@drawable/shape_common_edit_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:textColorHint="#c8c8c8"
                android:hint="@string/text_input_mobile"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_marginTop="19dp"
                android:background="@drawable/shape_common_edit_bg"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="14sp"
                android:textColorHint="#c8c8c8"
                android:hint="@string/text_input_password"/>

            <TextView
                android:id="@+id/tv_login_submit"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#f5f5f5"
                android:textSize="15sp"
                android:background="@drawable/shape_common_btn_bg"
                android:text="@string/text_login"
                android:layout_marginTop="31dp"
                android:gravity="center"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/app_default"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"/>

    </FrameLayout>

</FrameLayout>
