<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:background="#ffffff">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#333"
            android:text="@string/title_recommend"
            android:textSize="17sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="200dp"
        android:background="@mipmap/icon_recommend_bg">

        <RelativeLayout
            android:id="@+id/rl_recommend_customer"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_icon1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/icon_recommend1"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_create_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_icon1"
                android:layout_marginLeft="24dp"
                android:textColor="#333333"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:text="@string/text_customer"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_mine_arrow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/icon_recommend_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_recommend_attendant"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_icon2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/icon_recommend2"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/tv_recommend_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_icon2"
                android:textColor="#333333"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:text="@string/text_attendant"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_mine_arrow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/icon_recommend_line"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rebate"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="#ffffff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/iv_icon3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@mipmap/icon_recommend3"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iv_icon3"
                android:layout_marginLeft="24dp"
                android:textColor="#333333"
                android:textSize="17sp"
                android:layout_centerVertical="true"
                android:text="@string/text_rebate"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_mine_arrow"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/icon_recommend_line"/>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>
