<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="3dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tv_recommend_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#0fb302"
                android:layout_centerVertical="true"
                android:text="2016.08.30"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#999999"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/tv_recommend_date"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="推荐日期"/>

            <TextView
                android:id="@+id/tv_recommend_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#fea21f"
                android:text="已推荐"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/icon_dash_line"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="#999999"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="@string/text_customer_name"/>

                <TextView
                    android:id="@+id/tv_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#666666"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#999999"
                    android:textSize="17sp"
                    android:text="@string/text_customer_sex"/>

                <TextView
                    android:id="@+id/tv_customer_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#666666"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#999999"
                    android:textSize="17sp"
                    android:text="@string/text_customer_birthday"/>

                <TextView
                    android:id="@+id/tv_customer_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#666666"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textColor="#999999"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="@string/text_customer_mobile"/>

                <TextView
                    android:id="@+id/tv_customer_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#666666"
                    android:layout_marginLeft="15dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>